# Daily-Code

./: .gitignore  README.md  S4.java
ArkNights/: 17971253.json  17971253.txt  CMakeLists.txt  README.md  arkplan.json  arkplan.txt  doxygen.cfg  gacha.cpp  plan.md
Conway/: Conway.pro  cell.cpp  cell.h  main.cpp  quicklife.cpp  quicklife.h  window.cpp  window.h
Cpp/: ArkNights.cpp  conway.cpp  pretty.cpp
Cpp/Conway/: CMakeLists.txt  main.cpp
Cpp/Conway/include/: Cell.h  Conway.h
Cpp/Conway/src/: CMakeLists.txt  Cell.cpp  Conway.cpp
DolphinDBPlugin/: README.md
DolphinDBPlugin/bloomberg/: CMakeLists.txt  PluginBloomberg.txt  README.md
DolphinDBPlugin/bloomberg/src/: Session.cpp  Session.h  plugin_bloomberg.cpp  plugin_bloomberg.h
DolphinDBPlugin/hdf5/: CMakeLists.txt
DolphinDBPlugin/hdf5/src/: hdf5_plugin.cpp  hdf5_plugin.h
DolphinDBPlugin/kafka/: CMakeLists.txt  README.md
DolphinDBPlugin/kafka/src/: DolphinDBType.hh  DolphinDBType.json  client.cpp  plugin_kafka.cpp  plugin_kafka.h
DolphinDBPlugin/orc/: CMakeLists.txt  README.md
DolphinDBPlugin/orc/src/: orc_plugin.cpp
DolphinDBPlugin/parquet/: README.md
DolphinDBPlugin/parquet/src/: parquet_plugin.cpp
DolphinDBPlugin/rabbitmq/: CMakeLists.txt  PluginRabbitMQ.txt  README.md
DolphinDBPlugin/rabbitmq/include/: EventLoop.h  RabbitMQPlugin.h
DolphinDBPlugin/rabbitmq/src/: EventLoop.cpp  RabbitMQPlugin.cpp
HDOJ/: Commen.h  HDOJ_1003.cpp  HDOJ_1004.cpp  HDOJ_1005.cpp  HDOJ_1007.cpp  HDOJ_1008.cpp  HDOJ_1009.cpp  HDOJ_1010.cpp  HDOJ_1012.cpp  HDOJ_1013.cpp  HDOJ_1014.cpp  HDOJ_1018.cpp  HDOJ_1019.cpp  HDOJ_1020.cpp  HDOJ_1021.cpp  HDOJ_1022.cpp  HDOJ_1023.cpp  HDOJ_1029.cpp  HDOJ_1031.cpp  HDOJ_1033.cpp  HDOJ_1035.cpp  HDOJ_1037.cpp  HDOJ_1038.cpp  HDOJ_1039.cpp  HDOJ_1040.cpp  HDOJ_1042.cpp  HDOJ_1048.cpp  HDOJ_1049.cpp  HDOJ_1050.cpp  HDOJ_1051.cpp  HDOJ_1052.cpp  HDOJ_1056.cpp  HDOJ_1058.cpp  HDOJ_1060.cpp  HDOJ_1061.cpp  HDOJ_1062.cpp  HDOJ_1063.java  HDOJ_1064.cpp  HDOJ_1065.cpp  HDOJ_1070.cpp  (+186 more)
Homework/DataStructure/1.5/: Monomial.cpp  Monomial.h  Polynomial.cpp  Polynomial.h  main.cpp
Homework/DataStructure/2.9/: Constants.h  Maze.cpp  Maze.h  Node.h  Point.cpp  Point.h  Solution.cpp  Solution.h  Stack.h  main.cpp
Homework/DataStructure/4.4/: Constants.h  (+11 more)
Homework/IntelligenceSystem/: dataset.py  evaluate.py  network.py  train.py
Homework/Network/: TCPclient.cpp  TCPserver.cpp  UDPclient.cpp  UDPserver.cpp
IAs/: Chapter3$1.java  Chapter4$3.java  EXQueue.java  EXStack.java  IA$BinarySearchTree.java  IA$Heap.java  IA$Stack.java  IA15$1.java  IA15$4.java  IA4$2.java  IA6$4.java  IA7$1.java  IA7$3.java  IA9$2.java  MD.java  Matrix.java
Java/IAs/: Chapter3$2.java  Chapter4$1.java  IA$LinkedList.java  IA$Queue.java  IA$RedBlackTree.java  IA8$2.java  IA8$3.java
Java/S5/: S5.java  test.txt  testout.txt
Java/S6/: S6.java
Minecraft/: AdvancedRocketryHelper.py  CMakeLists.txt  README.md  fission.py  forge.cpp  minecraft.txt
Navidrome/: 2-Dim.m3u  ED-Collection-0.m3u  ED-Collection-1.m3u  ED-Collection-2.m3u  ED-Collection-3.m3u  ED-Collection-4.m3u  ED-Collection-5.m3u  ED-Collection-6.m3u  OP-Collection-0.m3u  OP-Collection-1.m3u  OP-Collection-2.m3u  OP-Collection-3.m3u  OP-Collection-4.m3u  OP-Collection-5.m3u  OP-Collection-6.m3u
Pytorch/: G2048.py  G21.py  ReplayMemory.py  train.py
S6/: mult.txt  multout.txt
Setu/: CMakeLists.txt  README.md  complementary.sql  pretty.cpp  scan.py  watch.sql
Setu/script/: captioning.py  crop.py  filte.py  setu.ipynb
Setu/sqlite/: CMakeLists.txt
Setu/sqlite3/: CMakeLists.txt
Setu/src/: CMakeLists.txt  dbinit.cpp  encode.cpp  pretty.cpp  scan.cpp
TestClass/: TestClass.java
Trackers/: README.md  merge.cpp  merge.sh
(+10 files in other folders)
